--- a/package.json
+++ b/package.json
@@ -11,11 +11,15 @@
     "build:css": "postcss src/index.css -o dist/output.css"
   },
   "dependencies": {
+    "mqtt": "^5.3.4",
     "postcss-cli": "^11.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.12.0",
-    "react-router-dom": "^6.21.1"
+    "react-router-dom": "^6.21.1",
+    "socket.io": "^4.7.3",
+    "socket.io-client": "^4.7.3",
+    "zustand": "^4.4.7"
   },
   "devDependencies": {
     "@types/react": "^18.2.43",
