--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "build:css": "postcss src/index.css -o dist/output.css"
   },
   "dependencies": {
+    "axios": "^1.6.5",
+    "moment": "^2.30.1",
     "mqtt": "^5.3.4",
     "postcss-cli": "^11.0.0",
     "react": "^18.2.0",
@@ -19,11 +21,13 @@
     "react-router-dom": "^6.21.1",
     "socket.io": "^4.7.3",
     "socket.io-client": "^4.7.3",
+    "uuid": "^9.0.1",
     "zustand": "^4.4.7"
   },
   "devDependencies": {
     "@types/react": "^18.2.43",
     "@types/react-dom": "^18.2.17",
+    "@types/uuid": "^9.0.7",
     "@typescript-eslint/eslint-plugin": "^6.14.0",
     "@typescript-eslint/parser": "^6.14.0",
     "@vitejs/plugin-react": "^4.2.1",
